fixed a small merge conflict, i hope

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <h2>Author: Russ Urquhart</h2>
 
 <div>
-<<<<<<< HEAD
     <p> Taking a look at commit hash!</p>
-=======
+</div>
+
+<div>
     <p>This was added from GitHub</p>
->>>>>>> 08e3d9db0ed84819fa9c6d32346741a04e7962f5
 </div>
