--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 	<body>
+		<div class="container">
+
 <h1>Hello Git World!</h1>    
 
 <div>
@@ -18,5 +23,6 @@
 </div>
 
 <!--Some comments-->
+		</div>
 	</body>
 </html>
